--- a/.gitignore
+++ b/.gitignore
@@ -10,7 +10,8 @@ __pycache__/
 # C extensions
 *.so
 
-secret.py
+.env
+dcz_logo.png
 
 # Distribution / packaging
 .Python
@@ -31,6 +32,8 @@ share/python-wheels/
 .installed.cfg
 *.egg
 MANIFEST
+
+app/
 
 # PyInstaller
 #  Usually these files are written by a python script from a template
