--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -3,7 +3,7 @@ name: Build and Deploy with Docker
 on:
   push:
     branches:
-      - develop  # main 브랜치에 푸시될 때마다 트리거
+      - main  # develop 브랜치에 푸시될 때마다 트리거
 
 env:
   DOCKER_IMAGE: ghcr.io/${{ github.actor }}/dcz-backend  # ghcr.io/{github_username}/이미지이름
@@ -16,13 +16,13 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout Repository
-        uses: actions/checkout@v2  # GitHub 리포지토리 클론
+        uses: actions/checkout@v3  # GitHub 리포지토리 클론
       
       - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v1  # Docker Buildx 설정
+        uses: docker/setup-buildx-action@v2  # Docker Buildx 최신 버전 사용
         
       - name: Cache Docker Layers
-        uses: actions/cache@v3
+        uses: actions/cache@v3  # Cache 최신 버전 사용
         with:
           path: /tmp/.buildx-cache
           key: ${{ runner.os }}-buildx-${{ env.VERSION }}
@@ -30,7 +30,7 @@ jobs:
             ${{ runner.os }}-buildx-
 
       - name: Login to GHCR
-        uses: docker/login-action@v1
+        uses: docker/login-action@v2  # GHCR 로그인 최신 버전 사용
         with:
           registry: ghcr.io
           username: ${{ github.actor }}  # GitHub 사용자 이름
@@ -38,26 +38,24 @@ jobs:
         
       - name: Build and Push Docker Image
         id: docker_build
-        uses: docker/build-push-action@v2
+        uses: docker/build-push-action@v4  # Docker Build and Push 최신 버전 사용
         with:
-          builder: ${{ steps.buildx.outputs.name }}
           push: true  # 이미지를 GHCR에 푸시
           tags: ${{ env.DOCKER_IMAGE }}:latest  # 이미지 태그 설정
+
   deploy:
     needs: build
     name: Deploy
-    runs-on: [ self-hosted, label-dcz ]
-    # label-newproject 라는 이름으로 AWS EC2 가 Runner 를 작동시킬 때 사용했던 그 label
+    runs-on: [ self-hosted, label-dcz ]  # AWS EC2 Runner의 라벨
     steps:
-      - name: Login to ghcr
-        uses: docker/login-action@v1
+      - name: Login to GHCR
+        uses: docker/login-action@v2  # GHCR 로그인 최신 버전 사용
         with:
           registry: ghcr.io
           username: ${{ github.actor }}
           password: ${{ secrets.DCZ_TOKEN }}
       
-      - name: Docker run
+      - name: Docker Run
         run: |
-          docker stop ${{ env.NAME }} && docker rm ${{ env.NAME }} && docker rmi ${{ env.DOCKER_IMAGE }}:latest
-          docker run -d -p 80:80 --name dcz --restart always ${{ env.DOCKER_IMAGE }}:latest
-          
+          docker stop ${{ env.NAME }} || true && docker rm ${{ env.NAME }} || true && docker rmi ${{ env.DOCKER_IMAGE }}:latest || true
+          docker run -d -p 80:80 --name ${{ env.NAME }} --restart always ${{ env.DOCKER_IMAGE }}:latest
