--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -3,12 +3,12 @@ name: Build and Deploy with Docker
 on:
   push:
     branches:
-      - main
+      - main  
 
 env:
-  DOCKER_IMAGE: ghcr.io/${{ github.actor }}/dcz-backend
-  VERSION: ${{ github.sha }}
-  NAME: dcz-backend
+  DOCKER_IMAGE: ghcr.io/${{ github.actor }}/dcz-backend  
+  VERSION: ${{ github.sha }}  
+  NAME: dcz-backend  
 
 jobs:
   build:
@@ -16,13 +16,13 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout Repository
-        uses: actions/checkout@v3
-      
+        uses: actions/checkout@v3  
+
       - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v2
-        
+        uses: docker/setup-buildx-action@v2  
+
       - name: Cache Docker Layers
-        uses: actions/cache@v3
+        uses: actions/cache@v3  
         with:
           path: /tmp/.buildx-cache
           key: ${{ runner.os }}-buildx-${{ env.VERSION }}
@@ -30,35 +30,38 @@ jobs:
             ${{ runner.os }}-buildx-
 
       - name: Login to GHCR
-        uses: docker/login-action@v2
+        uses: docker/login-action@v2  
         with:
           registry: ghcr.io
-          username: ${{ github.actor }}
-          password: ${{ secrets.DCZ_TOKEN }}
-        
-      - name: Create .env file from Secrets
-        run: echo "${{ secrets.ENV_FILE }}" > .env
+          username: ${{ github.actor }}  
+          password: ${{ secrets.DCZ_TOKEN }}  
 
       - name: Build and Push Docker Image
         id: docker_build
-        uses: docker/build-push-action@v4
+        uses: docker/build-push-action@v4  
         with:
-          context: .
-          push: true
-          tags: ${{ env.DOCKER_IMAGE }}:latest
+          context: .  
+          push: true  
+          tags: ${{ env.DOCKER_IMAGE }}:latest  
 
   deploy:
     needs: build
     name: Deploy
-    runs-on: [ self-hosted, label-dcz ]
+    runs-on: [ self-hosted, label-dcz ]  
     steps:
       - name: Login to GHCR
-        uses: docker/login-action@v2
+        uses: docker/login-action@v2  
         with:
           registry: ghcr.io
           username: ${{ github.actor }}
           password: ${{ secrets.DCZ_TOKEN }}
       
+      - name: Set up ENV_FILE from GitHub Secrets
+        run: |
+          echo "DATABASE_URL=${{ secrets.DATABASE_URL }}" >> .env
+          echo "SECRET_KEY=${{ secrets.SECRET_KEY }}" >> .env
+          echo "ACCESS_TOKEN_EXPIRE_MINUTES=${{ secrets.ACCESS_TOKEN_EXPIRE_MINUTES }}" >> .env
+
       - name: Docker Run
         run: |
           docker stop ${{ env.NAME }} || true && docker rm ${{ env.NAME }} || true && docker rmi ${{ env.DOCKER_IMAGE }}:latest || true
