--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -18,6 +18,12 @@ jobs:
       - name: Checkout Repository
         uses: actions/checkout@v3
         
+      - name: Create .env file
+        run: |
+          echo "DATABASE_URL=postgresql://yabbi:12341234@43.203.215.239:5432/dcz" > .env
+          echo "SECRET_KEY=dkssudgktpdywjsmsrlarkdmsdlqslqslekwjsmseoejrthvmxnpd" >> .env
+          echo "ACCESS_TOKEN_EXPIRES_MINUTES=1440" >> .env
+
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v2
         
@@ -43,10 +49,6 @@ jobs:
           context: .
           push: true
           tags: ${{ env.DOCKER_IMAGE }}:latest
-          build-args: |
-            DATABASE_URL=${{ secrets.DATABASE_URL }}
-            SECRET_KEY=${{ secrets.SECRET_KEY }}
-            ACCESS_TOKEN_EXPIRES_MINUTES=${{ secrets.ACCESS_TOKEN_EXPIRES_MINUTES }}
 
   deploy:
     needs: build
@@ -64,4 +66,4 @@ jobs:
         run: |
           docker stop ${{ env.NAME }} || true && docker rm ${{ env.NAME }} || true && docker rmi ${{ env.DOCKER_IMAGE }}:latest || true
           docker pull ${{ env.DOCKER_IMAGE }}:latest
-          docker run -d -p 80:80 --name ${{ env.NAME }} --restart always ${{ env.DOCKER_IMAGE }}:latest
+          docker run -d -p 80:80 --name ${{ env.NAME }} --restart always --env-file .env ${{ env.DOCKER_IMAGE }}:latest
