--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -18,7 +18,7 @@ jobs:
       - name: Checkout Repository
         uses: actions/checkout@v3
 
-      - name: Set up environment variables
+      - name: Create .env file
         run: |
           echo "DATABASE_URL=${{ secrets.DATABASE_URL }}" > .env
           echo "SECRET_KEY=${{ secrets.SECRET_KEY }}" >> .env
@@ -71,5 +71,5 @@ jobs:
           docker run -d -p 80:80 \
             --name ${{ env.NAME }} \
             --restart always \
-            --env-file .env \
+            -v $(pwd)/.env:/dcz/.env \
             ${{ env.DOCKER_IMAGE }}:latest
