--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -18,17 +18,6 @@ jobs:
       - name: Checkout Repository
         uses: actions/checkout@v3
 
-      - name: Generate Environment Variables File for Production
-        env:
-          DATABASE_URL: ${{ secrets.DATABASE_URL }}
-          SECRET_KEY: ${{ secrets.SECRET_KEY }}
-          ACCESS_TOKEN_EXPIRES_MINUTES: ${{ secrets.ACCESS_TOKEN_EXPIRES_MINUTES }}
-        run: |
-          echo "DATABASE_URL=$DATABASE_URL" >> .env
-          echo "SECRET_KEY=$SECRET_KEY" >> .env
-          echo "ACCESS_TOKEN_EXPIRES_MINUTES=$ACCESS_TOKEN_EXPIRES_MINUTES" >> .env
-      
-
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v2
 
@@ -54,6 +43,7 @@ jobs:
           context: .
           push: true
           tags: ${{ env.DOCKER_IMAGE }}:latest
+          build-args: DATABASE_URL=${{ secrets.DATABASE_URL }},SECRET_KEY=${{ secrets.SECRET_KEY }},ACCESS_TOKEN_EXPIRES_MINUTES=${{ secrets.ACCESS_TOKEN_EXPIRES_MINUTES }}
 
   deploy:
     needs: build
