--- a/requirements.txt
+++ b/requirements.txt
@@ -1,45 +1,49 @@
-alembic==1.13.2
 annotated-types==0.7.0
-anyio==4.4.0
-bcrypt==4.0.1
+anyio==4.6.2.post1
+bcrypt==4.2.0
 boto3==1.35.57
 botocore==1.35.57
 certifi==2024.8.30
 cffi==1.17.1
 click==8.1.7
-cryptography==43.0.1
+cryptography==43.0.3
 dnspython==2.7.0
+dotenv==0.0.5
 ecdsa==0.19.0
 email_validator==2.2.0
 exceptiongroup==1.2.2
-fastapi==0.114.0
+fastapi==0.115.2
+fpdf==1.7.2
 h11==0.14.0
-httpcore==1.0.5
+httpcore==1.0.6
 httpx==0.27.2
-idna==3.8
+idna==3.10
 jmespath==1.0.1
-jose==1.0.0
-Mako==1.3.5
-MarkupSafe==2.1.5
+jwt==1.3.1
+lxml==5.3.0
+olefile==0.47
 passlib==1.7.4
-psycopg2-binary==2.9.9
+pillow==11.0.0
+psycopg==3.2.3
+psycopg2-binary==2.9.10
 pyasn1==0.6.1
 pycparser==2.22
-pydantic==2.9.0
+pydantic==2.9.2
 pydantic-settings==2.6.0
-pydantic_core==2.23.2
+pydantic_core==2.23.4
+pyhwp==0.1b15
 PyJWT==2.9.0
+PyPDF2==3.0.1
 python-dateutil==2.9.0.post0
 python-dotenv==1.0.1
 python-jose==3.3.0
-python-multipart==0.0.10
+python-multipart==0.0.12
 rsa==4.9
 s3transfer==0.10.3
 six==1.16.0
 sniffio==1.3.1
-SQLAlchemy==2.0.34
-starlette==0.38.5
+SQLAlchemy==2.0.36
+starlette==0.40.0
 typing_extensions==4.12.2
-tzdata==2024.1
 urllib3==2.2.3
-uvicorn==0.30.6
+uvicorn==0.32.0
